--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fsse2212_project_backend:${{ github.sha }}
           docker stop project_backend
           docker rm project_backend
-          docker run -d --name project_backend -p 8080:8080 mshchan3/fsse2212_project_backend:${{ github.sha }}
+          docker run -d --name project_backend -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/fsse2212_project_backend:${{ github.sha }}
